...
struct Store {
    func loadOcamons() -> [Ocamon] {
        return buildOcamons()
    }

    private func buildOcamons() -> [Ocamon] {
        let montyzard = Ocamon(name: "Montyzard", type: .soviet, info: "Storyteller", image: UIImage(named: "GenericImage"))
        let xavimander = Ocamon(name: "Xavimander", type: .soviet, info: "Storyteller", image: UIImage(named: "GenericImage"))
        let ricarchu = Ocamon(name: "Ricarchu", type: .soviet, info: "Storyteller", image: UIImage(named: "GenericImage"))
        let rothkoman = Ocamon(name: "Rothkoman", type: .soviet, info: "Storyteller", image: UIImage(named: "GenericImage"))
        let pedrobur = Ocamon(name: "Pedrobur", type: .soviet, info: "Storyteller", image: UIImage(named: "GenericImage"))
        let luiseon = Ocamon(name: "Luiseon", type: .soviet, info: "Storyteller", image: UIImage(named: "GenericImage"))
        let gregorfly = Ocamon(name: "Gregorfly", type: .soviet, info: "Storyteller", image: UIImage(named: "GenericImage"))
...
